#load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")

load("@protobuf//bazel:proto_library.bzl", "proto_library")
#load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_grpc_library")


package(default_visibility = ["//visibility:public"])

#proto_library(
#    name = "threathunter_proto",
#    srcs = ["threathunter.proto"],
#)

#cc_proto_library(
#    name = "threathunter_cc_proto",
#    deps = [":threathunter_proto"],
#)

proto_library(
    name = "threathunter_proto",
    srcs = ["threathunter.proto"],
)

cpp_grpc_library(
    name = "cpp_grpc_threathunter_proto",
    protos = [":threathunter_proto"]
)
